--- a/test-output/old/Test Suite/classes.html
+++ b/test-output/old/Test Suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Mathi2.SeleniumTest2.DragandDropTest</td>
+<td>Mathi2.SeleniumTest2.DownloadfilefromIE</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Draganddroptest</td>
+<td>DownloadfileTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
